# fullstackrust

./: .gitignore  Cargo.toml  Dockerfile
client/: Cargo.toml  index.html
client/src/: main.rs  style.css
server/: Cargo.toml
server/src/: main.rs
